--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ markdown: redcarpet
 redcarpet:
    extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 pygments: true
+exclude: [TODO, Rakefile, bootstrap, styles]
