--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ name: ReactiveX
 markdown: redcarpet
 redcarpet:
    extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
-pygments: true
+highlighter: pygments
 exclude: [TODO, Rakefile, bootstrap, styles]
